se cambian nombres incompatibles con el webhost

--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
                                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Páginas/nuestro-gin.html">Nuestro Gin</a>
+                                        <a class="nav-link" href="./Paginas/nuestro-gin.html">Nuestro Gin</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Páginas/galería.html">Galería</a>
+                                        <a class="nav-link" href="./Paginas/galeria.html">Galería</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Páginas/recetas.html">Recetas</a>
+                                        <a class="nav-link" href="./Paginas/recetas.html">Recetas</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Páginas/contacto.html">Contacto</a>
+                                        <a class="nav-link" href="./Paginas/contacto.html">Contacto</a>
                                     </li>
                                 </ul>
                             </div>
                           </div>
                         <ul class="nav Nav-visible animate__animated animate__fadeIn d-none d-md-flex justify-content-end">
                             <li class="nav-item"><a class="py-0 nav-link active link-light" href="./index.html">Home</a></li>
-                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Páginas/nuestro-gin.html">Nuestro Gin</a></li>
-                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Páginas/galería.html">Galería</a></li>
-                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Páginas/recetas.html">Recetas</a></li>
-                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Páginas/contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Paginas/nuestro-gin.html">Nuestro Gin</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Paginas/galeria.html">Galería</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Paginas/recetas.html">Recetas</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./Paginas/contacto.html">Contacto</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -82,7 +82,7 @@
                     <div class="grid-home-item botellaIMG col-6 offset-3 offset-md-0 col-lg-3 offset-lg-1 d-md-block pt-3"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
                 </div>    
                 <div class="grid-home-item cata row text-white bg-dark my-3 p-2" style="--bs-bg-opacity: .7;">Nota de la cata, aromas y visual.</div>
-                <a href="./Páginas/nuestro-gin.html">
+                <a href="./Paginas/nuestro-gin.html">
                     <div class="grid-home-item ingredientes row align-items-center bg-dark" style="--bs-bg-opacity: .7;">
                         <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2 col-4"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
                         <div class="grid-ingredientes cascarasIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
