--- a/Paginas/recetas.html
+++ b/Paginas/recetas.html
@@ -43,7 +43,7 @@
                                     <a class="nav-link" href="./nuestro-gin.html">Nuestro Gin</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./galería.html">Galería</a>
+                                        <a class="nav-link" href="./galeria.html">Galería</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link active" href="./recetas.html">Recetas</a>
@@ -57,7 +57,7 @@
                         <ul class="nav Nav-visible animate__animated animate__fadeIn d-none d-md-flex justify-content-end">
                             <li class="nav-item"><a class="py-0 nav-link link-light" href="../index.html">Home</a></li>
                             <li class="nav-item"><a class="py-0 nav-link link-light" href="./nuestro-gin.html">Nuestro Gin</a></li>
-                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./galería.html">Galería</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./galeria.html">Galería</a></li>
                             <li class="nav-item"><a class="py-0 nav-link active link-light" href="./recetas.html">Recetas</a></li>
                             <li class="nav-item"><a class="py-0 nav-link link-light" href="./contacto.html">Contacto</a></li>
                         </ul>
