Se realizan algunas modificaciones respecto a las últimas correcciones, ajustando algunos textos que se escapaban de los containers, se agrega lo correspondiente a SEO y se hace uso de las propiedades extend, mixin y maps

--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
-        <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
-        <title>Artemis Handcrafted Gin - Home</title> 
+        <meta name="keywords" content="Artemis, Gin Cordobés, Handcrafted, bebida, alcohol, enebro, Gin Tonic">
+        <meta name="description" content="Página oficial de Artemis Handcrafted Gin, el gin Cordobés.">
+        <title>Artemis Handcrafted Gin - Contacto</title> 
         <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
         <!-- <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css"> -->
         <link rel="stylesheet" href="../Estilos/style-con-scss.css">
@@ -69,23 +69,23 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="Cont_titulo row">
-                        <h2 class="titulo col-md-4 offset-md-4 col-8 offset-2 bg-artemis font-artemis text-white text-center">Contactanos!</h2>
+                        <h2 class="titulo-contacto col-md-4 offset-md-4 col-12 offset-0 bg-artemis font-artemis text-white text-center">Contactanos!</h2>
                     </div>
                     <form class="formulario bg-artemis py-3" autocomplete="on">
                         <div class="Main_form row px-3 py-1 text-center">
-                            <div class="col-4 offset-4 form-floating mb-3">
+                            <div class="col-12 col-md-4 offset-md-4 form-floating mb-3">
                                 <input type="text" name="fnombre" class="form-control" id="floatingInput" required placeholder="Ejemplo" autofocus>
                                 <label for="floatingInput">Nombre</label>
                             </div>
                         </div> 
                         <div class="row px-3 py-1 text-center">
-                            <div class="col-4 offset-4 form-floating mb-3">
+                            <div class="col-12 col-md-4 offset-md-4 form-floating mb-3">
                                 <input type="text" name="fapellido" class="form-control" id="floatingInput1" required placeholder="Ejemplo">
                                 <label for="floatingInput1">Apellido</label>
                             </div>
                         </div>   
                         <div class="row px-3 py-1 text-center">
-                            <div class="col-6 offset-3 form-floating mb-3">                                
+                            <div class="col-12 col-md-6 offset-md-3 form-floating mb-3">                                
                                 <input type="email" name="fmail" class="form-control" id="floatingInput2" required placeholder="ejemplo@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                                 <label for="floatingInput2">Mail</label>
                             </div>
@@ -134,7 +134,7 @@
                         <div class="aclaraciones col-md-6 col-8">
                             <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
                         </div>
-                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-2">
                             <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
                         </div>
                         <div class="autor">
