--- a/Paginas/galeria.html
+++ b/Paginas/galeria.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
-        <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
-        <title>Artemis Handcrafted Gin - Home</title> 
+        <meta name="keywords" content="Artemis, Gin Cordobés, Handcrafted, bebida, alcohol, enebro, Gin Tonic">
+        <meta name="description" content="Página oficial de Artemis Handcrafted Gin, el gin Cordobés.">
+        <title>Artemis Handcrafted Gin - Galería</title> 
         <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
         <!-- <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css"> -->
         <link rel="stylesheet" href="../Estilos/style-con-scss.css">
@@ -69,7 +69,7 @@
             <div class="container-fluid galery-section">
                 <div class="container">
                     <div class="Video row">
-                        <div class="col-12 offset-0 col-md-6 offset-md-3 text-center text-light bg-artemis font-artemis my-2 pt-2"><h2>¿Cómo preparo un buen gin?</h2></div>
+                        <div class="col-12 offset-0 col-lg-6 offset-lg-3 text-center text-light bg-artemis font-artemis my-2 pt-2"><h1>¿Cómo preparo un buen gin tonic?</h1></div>
                         <div class="col-12 offset-0 text-center"><iframe src="https://www.youtube.com/embed/bh6AcRrnKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
                     </div>           
                     <div id="carouselExampleControls" class="galeria_principal d-lg-none row carousel slide" data-bs-ride="carousel">
@@ -453,7 +453,7 @@
                         <div class="aclaraciones col-md-6 col-8">
                             <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
                         </div>
-                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-2">
                             <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
                         </div>
                         <div class="autor">
