--- a/Paginas/nuestro-gin.html
+++ b/Paginas/nuestro-gin.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
-        <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
-        <title>Artemis Handcrafted Gin - Home</title> 
+        <meta name="keywords" content="Artemis, Gin Cordobés, Handcrafted, bebida, alcohol, enebro, Gin Tonic">
+        <meta name="description" content="Página oficial de Artemis Handcrafted Gin, el gin Cordobés.">
+        <title>Artemis Handcrafted Gin - Nuestro gin</title> 
         <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
         <!-- <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css"> -->
         <link rel="stylesheet" href="../Estilos/style-con-scss.css">
@@ -70,7 +70,7 @@
                 <div class="container">
                             <div class="row">
                                
-                                <div class="grid-item2 ingredientes col-8 offset-2 col-md-4 offset-md-4 text-center bg-artemis mt-3">Ingredientes</div>
+                                <div class="grid-item2 ingredientes col-12 offset-0 col-md-4 offset-md-4 text-center bg-artemis mt-3">Ingredientes</div>
                                 <div class="accordion col-10 offset-1 col-md-8 offset-md-0 my-3" id="accordionExample">
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="headingOne">
@@ -111,7 +111,7 @@
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="headingFour">
                                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                            Cáscara de naranja y limon
+                                            Cáscara de naranja y limón
                                           </button>
                                         </h2>
                                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="">
@@ -135,7 +135,7 @@
                         <div class="aclaraciones col-md-6 col-8">
                             <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
                         </div>
-                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-2">
                             <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
                         </div>
                         <div class="autor">
