--- a/Paginas/recetas.html
+++ b/Paginas/recetas.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
-        <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
-        <title>Artemis Handcrafted Gin - Home</title> 
+        <meta name="keywords" content="Artemis, Gin Cordobés, Handcrafted, bebida, alcohol, enebro, Gin Tonic">
+        <meta name="description" content="Página oficial de Artemis Handcrafted Gin, el gin Cordobés.">
+        <title>Artemis Handcrafted Gin - Recetas</title> 
         <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
         <!-- <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css"> -->
         <link rel="stylesheet" href="../Estilos/style-con-scss.css">
@@ -69,10 +69,10 @@
             <main class="grid-container">
                 <div class="container-fluid">
                     <div class="container py-2">
-                        <div class="grid-item row bg-artemis font-artemis col-8 offset-2 col-lg-4 offset-lg-4 text-white justify-content-center" id="Titulo">Recetas para tu Gin</div>
+                        <h1 class="grid-item row bg-artemis font-artemis col-12 offset-0 col-lg-4 offset-lg-4 text-white justify-content-center" style="--bs-gutter-x:0" id="Titulo">Recetas para tu Gin</h1>
                         <div class="grid-item row my-2 bg-artemis-transp text-white p-2 align-items-center" id="receta1">
                             <div class="col-md-8 col-lg-10 text-justify">
-                                <div class="col-4 offset-4 col-md-0 offset-md-0 font-artemis negroni">Negroni:</div>
+                                <div class="col-12 col-md-0 offset-md-0 font-artemis negroni">Negroni:</div>
                                 <div class="d-md-block d-none">
                                     <ul>
                                         <li>30 ml de Campari</li>
@@ -89,7 +89,7 @@
                             <div class="grid-item col-md-4 col-lg-2 d-md-block d-none" id="fotorec1">
                                 <img class="img-fluid" src="../Images/NEGRONI.jpg" alt="Negroni">
                             </div>
-                            <div class="col-4 offset-4 d-md-none">   
+                            <div class="col-8 offset-2 d-md-none">   
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal1">
                                     <img class="img-fluid" src="../Images/NEGRONI.jpg" alt="Negroni" height="200px">
@@ -124,7 +124,7 @@
                         </div>
                         <div class="row my-2 bg-artemis-transp text-white p-2 align-items-center">
                             <div class="col-md-8 col-lg-10 text-justify">
-                                <div class="col-4 offset-4 col-md-0 offset-md-0 font-artemis negroni">Gin tonic:</div>
+                                <div class="col-12 col-md-0 offset-md-0 font-artemis negroni">Gin tonic:</div>
                                 <div class="d-md-block d-none">
                                     <ul>
                                         <li>50 ml de gin</li>
@@ -141,7 +141,7 @@
                             <div class="grid-item col-md-4 col-lg-2 d-md-block d-none" id="fotorec2">
                                 <img class="img-fluid" src="https://assets.unileversolutions.com/recipes-v2/218689.jpg" alt="Gin Tonic">
                             </div>
-                            <div class="col-4 offset-4 d-md-none">   
+                            <div class="col-8 offset-2 d-md-none">   
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                                     <img class="img-fluid" src="https://assets.unileversolutions.com/recipes-v2/218689.jpg" alt="Gin Tonic" height="200px">
@@ -177,7 +177,7 @@
                         </div>
                         <div class="row my-2 bg-artemis-transp text-white p-2 align-items-center">
                             <div class="col-md-8 col-lg-10 text-justify">
-                                <div class="col-4 offset-4 col-md-0 offset-md-0 font-artemis negroni">Gin Fizz:</div>
+                                <div class="col-12 col-md-0 offset-md-0 font-artemis negroni">Gin Fizz:</div>
                                 <div class="d-md-block d-none">
                                     <ul>
                                         <li>60 ml gin</li>
@@ -194,7 +194,7 @@
                             <div class="grid-item col-md-4 col-lg-2 d-md-block d-none" id="fotorec2">
                                 <img class="img-fluid" src="../Images/gin fizz.jfif" alt="Gin Fizz">
                             </div>
-                            <div class="col-4 offset-4 d-md-none">   
+                            <div class="col-8 offset-2 d-md-none">   
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                                     <img class="img-fluid" src="../Images/gin fizz.jfif" alt="Gin Fizz" height="200px">
@@ -230,7 +230,7 @@
                         </div>
                         <div class="row my-2 bg-artemis-transp text-white p-2 align-items-center">
                             <div class="col-md-8 col-lg-10 text-justify">
-                                <div class="col-4 offset-4 col-md-0 offset-md-0 font-artemis negroni">Martini:</div>
+                                <div class="col-12 col-md-0 offset-md-0 font-artemis negroni">Martini:</div>
                                 <div class="d-md-block d-none">
                                     <ul>
                                         <li>2.5 oz (75 ml) gin</li>
@@ -245,7 +245,7 @@
                             <div class="grid-item col-md-4 col-lg-2 d-md-block d-none" id="fotorec2">
                                 <img class="img-fluid" src="https://t2.rg.ltmcdn.com/es/posts/3/7/0/dry_martini_41073_orig.jpg" alt="Martini">
                             </div>
-                            <div class="col-4 offset-4 d-md-none">   
+                            <div class="col-8 offset-2 d-md-none">   
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal4">
                                     <img class="img-fluid" src="https://t2.rg.ltmcdn.com/es/posts/3/7/0/dry_martini_41073_orig.jpg" alt="Martini" height="200px">
@@ -279,7 +279,7 @@
                         </div>
                         <div class="row mt-2 bg-artemis-transp text-white p-2 align-items-center">
                             <div class="col-md-8 col-lg-10 text-justify">
-                                <div class="col-4 offset-4 col-md-0 offset-md-0 font-artemis negroni">Cyn tonic:</div>
+                                <div class="col-12 col-md-0 offset-md-0 font-artemis negroni">Cyn tonic:</div>
                                 <div class="d-md-block d-none">
                                     <ul>
                                         <li>50 ml. de gin</li>
@@ -294,7 +294,7 @@
                             <div class="grid-item col-md-4 col-lg-2 d-md-block d-none" id="fotorec2">
                                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTteYO-JIXn5kzgGgvjLSRHYoSM9dSsZ-Ul9zKpJipsCA2ZkwwmtmaTjyILWpT7xsNiCbk&usqp=CAU" alt="Cyn tonic">
                             </div>
-                            <div class="col-4 offset-4 d-md-none">   
+                            <div class="col-8 offset-2 d-md-none">   
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal5">
                                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTteYO-JIXn5kzgGgvjLSRHYoSM9dSsZ-Ul9zKpJipsCA2ZkwwmtmaTjyILWpT7xsNiCbk&usqp=CAU" alt="Cyn tonic" height="200px">
@@ -338,7 +338,7 @@
                         <div class="aclaraciones col-md-6 col-8">
                             <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
                         </div>
-                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-2">
                             <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
                         </div>
                         <div class="autor">
