--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
-        <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
+        <meta name="keywords" content="Artemis, Gin Cordobés, Handcrafted, bebida, alcohol, enebro, Gin Tonic">
+        <meta name="description" content="Página oficial de Artemis Handcrafted Gin, el gin Cordobés.">
         <title>Artemis Handcrafted Gin - Home</title> 
         <!-- <link rel="stylesheet" href="./Estilos/style.css"> -->
         <!-- <link rel="stylesheet" href="./Estilos/style-con-bootstrap.css"> -->
@@ -70,13 +70,15 @@
         <section class="home-section">
             <div class="grid-home container">
                 <div class="row pt-3">
-                    <div class="grid-home-item description col-12 col-md-6 col-lg-8 bg-dark text-white" style="--bs-bg-opacity: .7;"><span class="fw-bold">GIN ARTEMIS</span>, producto nacional, nacido en Córdoba. Su incomparable sabor es el resultado de la selección de botánicos naturales y el riguroso proceso de destilación. Elaborado artesanalmente a base de alcohol de cereales y enebro
+                    <div class="grid-home-item description col-12 col-md-6 col-lg-8 bg-dark text-white" style="--bs-bg-opacity: .7;">
+                        <h1 class="fw-bold d-flex">GIN ARTEMIS, GIN CORDOBÉS:</h1>
+                        Producto nacional, nacido en Córdoba. Su incomparable sabor es el resultado de la selección de botánicos naturales y el riguroso proceso de destilación. Elaborado artesanalmente a base de alcohol de cereales y enebro
                         <div>Propiedades de la botella:</div>
                         <ul class="">
                             <li class="">Contenido: 500 mL.</li>
                             <li class="">Peso: 500 gr</li>
                             <li class="">Color: Marrón</li>
-                            <li class="">Tapon: Corcho sintético tipo T</li>
+                            <li class="">Tapón: Corcho sintético tipo T</li>
                           </ul>
                     </div>
                     <div class="grid-home-item botellaIMG col-6 offset-3 offset-md-0 col-lg-3 offset-lg-1 d-md-block pt-3"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
@@ -108,7 +110,7 @@
                         <div class="aclaraciones col-md-6 col-8">
                             <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
                         </div>
-                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-2">
                             <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
                         </div>
                         <div class="autor">
