Se hacen cambios en el home

--- a/index.html
+++ b/index.html
@@ -66,9 +66,31 @@
                 </nav>
             </header>     
         </div>
-                     
+        <div class="container-fluid carrusel-home px-0">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./Images/JMG6080.jpg" class="d-block w-100 foto-carrusel" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/JMG6131.jpg" class="d-block w-100 foto-carrusel" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./Images/JMG6082.jpg" class="d-block w-100 foto-carrusel" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>             
         <section class="home-section">
-            <div class="grid-home container">
+            <div class="grid-home container py-3">
                 <div class="row pt-3">
                     <div class="grid-home-item description col-12 col-md-6 col-lg-8 bg-dark text-white" style="--bs-bg-opacity: .7;">
                         <h1 class="fw-bold d-flex">GIN ARTEMIS, GIN CORDOBÉS:</h1>
@@ -83,9 +105,8 @@
                     </div>
                     <div class="grid-home-item botellaIMG col-6 offset-3 offset-md-0 col-lg-3 offset-lg-1 d-md-block pt-3"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
                 </div>    
-                <div class="grid-home-item cata row text-white bg-dark my-3 p-2" style="--bs-bg-opacity: .7;">Nota de la cata, aromas y visual.</div>
                 <a href="./Paginas/nuestro-gin.html">
-                    <div class="grid-home-item ingredientes row align-items-center bg-dark" style="--bs-bg-opacity: .7;">
+                    <div class="grid-home-item ingredientes row align-items-center bg-dark mt-3" style="--bs-bg-opacity: .7;">
                         <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2 col-4"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
                         <div class="grid-ingredientes cascarasIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
                         <div class="grid-ingredientes cardamomoIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cardamomo.png" alt="Cardamomo"></div>
@@ -100,7 +121,21 @@
                     <div class="grid-ingredientes canela col-md-2 text-center">Canela</div>
                     <div class="grid-ingredientes coriandro col-md-2 text-center">Coriandro</div>
                 </div>
-                <div class="grid-home-item contacto text-white">Contactos útiles MAXI GASTON</div>
+                <div class="contacto text-white bg-dark mt-3 row align-items-center" style="--bs-bg-opacity: .7;">
+                    <div class="contacto-home col-12">Contactos útiles</div>
+                    <div class="icon-contacto col-1 text-end"><i class="fas fa-user"></i></div>
+                    <div class="contacto-text col-5">Maxi Martino</div>
+                    <div class="icon-contacto col-1 text-end"><i class="fas fa-user"></i></div>
+                    <div class="contacto-text col-5">Guido Fraire</div>
+                    <div class="icon-contacto col-1 text-end"><i class="fas fa-phone"></i></div>
+                    <div class="contacto-text col-5">351-000-0000</div>
+                    <div class="icon-contacto col-1 text-end"><i class="fas fa-phone"></i></div>
+                    <div class="contacto-text col-5">351-000-0000</div>
+                    <div class="icon-contacto col-1 text-end"><i class="fas fa-envelope"></i></div>
+                    <div class="contacto-text col-5">xxx@gmail.com</div>
+                    <div class="icon-contacto col-1 text-end"><i class="fas fa-envelope"></i></div>
+                    <div class="contacto-text col-5">xxx@gmail.com</div>
+                </div>
             </div>
         </section>
         <footer>
