--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
          <!-- Bootstrap CSS -->
         <!--  <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
         <link href="./bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -68,7 +69,7 @@
         </div>
         <div class="container-fluid carrusel-home px-0">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner animate__animated animate__fadeInLeft">
                   <div class="carousel-item active">
                     <img src="./Images/JMG6080.jpg" class="d-block w-100 foto-carrusel" alt="...">
                   </div>
@@ -90,7 +91,7 @@
               </div>
         </div>             
         <section class="home-section">
-            <div class="grid-home container py-3">
+            <div class="grid-home container py-3" data-aos="fade-right" data-aos-anchor-placement="center-bottom" data-aos-duration="700">
                 <div class="row pt-3">
                     <div class="grid-home-item description col-12 col-md-6 col-lg-8 bg-dark text-white" style="--bs-bg-opacity: .7;">
                         <h1 class="fw-bold d-flex">GIN ARTEMIS, GIN CORDOBÉS:</h1>
@@ -103,10 +104,10 @@
                             <li class="">Tapón: Corcho sintético tipo T</li>
                           </ul>
                     </div>
-                    <div class="grid-home-item botellaIMG col-6 offset-3 offset-md-0 col-lg-3 offset-lg-1 d-md-block pt-3"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
+                    <div class="grid-home-item botellaIMG col-6 offset-3 offset-md-0 col-lg-3 offset-lg-1 d-md-block pt-3" data-aos="flip-left" data-aos-duration="700"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
                 </div>    
                 <a href="./Paginas/nuestro-gin.html">
-                    <div class="grid-home-item ingredientes row align-items-center bg-dark mt-3" style="--bs-bg-opacity: .7;">
+                    <div class="grid-home-item ingredientes row align-items-center bg-dark mt-3" style="--bs-bg-opacity: .7;" data-aos="zoom-in-left" data-aos-anchor-placement="center-bottom">
                         <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2 col-4"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
                         <div class="grid-ingredientes cascarasIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
                         <div class="grid-ingredientes cardamomoIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cardamomo.png" alt="Cardamomo"></div>
@@ -114,14 +115,14 @@
                         <div class="grid-ingredientes coriandroIMG col-md-2 col-4"><img class="img-fluid" src="./Images/coriandro.png" alt="Coriandro"></div>
                     </div>
                 </a>
-                <div class="row text-white justify-content-center bg-dark d-none d-md-flex" style="--bs-bg-opacity: .7;">    
+                <div class="row text-white justify-content-center bg-dark d-none d-md-flex" style="--bs-bg-opacity: .7;" data-aos="zoom-in-left" data-aos-duration="700" data-aos-anchor-placement="center-bottom">    
                     <div class="grid-ingredientes enebro offset-md-0 col-md-2 text-center">Bayas de Enebro</div>            
                     <div class="grid-ingredientes cascaras col-md-2 text-center">Cáscaras de naranja y limón</div>                    
                     <div class="grid-ingredientes cardamomo col-md-2 text-center">Cardamomo</div>                    
                     <div class="grid-ingredientes canela col-md-2 text-center">Canela</div>
                     <div class="grid-ingredientes coriandro col-md-2 text-center">Coriandro</div>
                 </div>
-                <div class="contacto text-white bg-dark mt-3 row align-items-center" style="--bs-bg-opacity: .7;">
+                <div class="contacto text-white bg-dark mt-3 row align-items-center" style="--bs-bg-opacity: .7;" data-aos="fade-right" data-aos-duration="700" data-aos-anchor-placement="center-bottom">
                     <div class="contacto-home col-12">Contactos útiles</div>
                     <div class="icon-contacto col-1 text-end"><i class="fas fa-user"></i></div>
                     <div class="contacto-text col-5">Maxi Martino</div>
@@ -165,5 +166,9 @@
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
    -->
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+        AOS.init();
+  </script>
     </body>
 </html>
