Se modifica el nav-bar responsive en todas las páginas

--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                            <div class="offcanvas-header">
-                              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
-                              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            <div class="offcanvas-header bg-artemis">
+                              <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">Menú</h5>
+                              <button type="button" class="btn-close text-reset btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
-                            <div class="offcanvas-body">
+                            <div class="offcanvas-body bg-artemis">
                                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                                        <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Paginas/nuestro-gin.html">Nuestro Gin</a>
+                                        <a class="nav-link text-white" href="./Paginas/nuestro-gin.html">Nuestro Gin</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Paginas/galeria.html">Galería</a>
+                                        <a class="nav-link text-white" href="./Paginas/galeria.html">Galería</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Paginas/recetas.html">Recetas</a>
+                                        <a class="nav-link text-white" href="./Paginas/recetas.html">Recetas</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./Paginas/contacto.html">Contacto</a>
+                                        <a class="nav-link text-white" href="./Paginas/contacto.html">Contacto</a>
                                     </li>
                                 </ul>
                             </div>
@@ -91,7 +91,7 @@
               </div>
         </div>             
         <section class="home-section">
-            <div class="grid-home container py-3" data-aos="fade-right" data-aos-anchor-placement="center-bottom" data-aos-duration="700">
+            <div class="grid-home container py-3" data-aos="fade-right"  data-aos-duration="700">
                 <div class="row pt-3">
                     <div class="grid-home-item description col-12 col-md-6 col-lg-8 bg-dark text-white" style="--bs-bg-opacity: .7;">
                         <h1 class="fw-bold d-flex">GIN ARTEMIS, GIN CORDOBÉS:</h1>
