--- a/Paginas/galeria.html
+++ b/Paginas/galeria.html
@@ -30,26 +30,26 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                            <div class="offcanvas-header">
-                              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
-                              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                            </div>
+                            <div class="offcanvas-header bg-artemis">
+                                <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">Menú</h5>
+                                <button type="button" class="btn-close text-reset btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                              </div>
                             <div class="offcanvas-body">
                                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                     <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                                    <a class="nav-link text-white" aria-current="page" href="../index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                    <a class="nav-link" href="./nuestro-gin.html">Nuestro Gin</a>
+                                    <a class="nav-link text-white" href="./nuestro-gin.html">Nuestro Gin</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="./galeria.html">Galería</a>
+                                        <a class="nav-link text-white active" href="./galeria.html">Galería</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./recetas.html">Recetas</a>
+                                        <a class="nav-link text-white" href="./recetas.html">Recetas</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                                        <a class="nav-link text-white" href="./contacto.html">Contacto</a>
                                     </li>
                                  </ul>
                             </div>
